V4.0.0-BETA-2 - Unir desarrollo de Ínfima Cuantía IC-MINTEL-21-2024 con el nuevo diseño - Generar instalador para Windows, Linux y MacOS utilizando JDK17 - Arreglar bug para funcionamiento en MacOS - Arreglar bug para funcionamiento en Windows de 32 bits - Implementar requerimiento SRI para extender TimeOut . Arreglar bug para validar documentos P7M - Arreglar bug para firmar documentos PDF - Arreglar bug para validar documentos PDF (Validación de documentos en lote)